Fix hover effect for rcPanelBody2 by adjusting border color styling

--- a/rc-helper-styles-new.css
+++ b/rc-helper-styles-new.css
@@ -1443,7 +1443,7 @@
   border-left: 2px solid transparent;
 }
 #rcPanelBody > *:hover:not(#rcBtns),
-#rcPaneBody2 > *:hover:not(:first-child) {
+#rcPaneBody2 > *:hover {
   border-left-color: rgba(76,201,240,.5);
 }
 
