--- a/rc-helper-styles-new.css
+++ b/rc-helper-styles-new.css
@@ -1439,11 +1439,11 @@
 
 /* Section Glow */
 #rcPanelBody > *,
-#rcPaneBody2 > * {
+#rcPanelBody2 > * {
   border-left: 2px solid transparent;
 }
 #rcPanelBody > *:hover:not(#rcBtns),
-#rcPaneBody2 > *:hover {
+#rcPanelBody2 > *:hover {
   border-left-color: rgba(76,201,240,.5);
 }
 
